# ResourceKhan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile  makefile
.github/workflows/: cmake-test.yml
scripts/: run_clang_format.py  run_tests.py
src/: pwr_tree.c  pwr_tree.h  pwr_tree_conf.h  resource_khan.c  resource_khan.h  resource_khan_conf.h  resource_khan_ext.c  resource_khan_ext.h
test/: pwr_tree_conf_custom.h  recursive_reference_impl.c  resource_khan_conf_custom.h  test_basic.c  test_catch_errors.c  test_catch_nullptr.c  test_cb_calls.c  test_cb_errors.c  test_complex.c  test_complex1.c  test_complex2.c  test_detect_loop.c  test_detect_loop1.c  test_detect_loop2.c  test_detect_loop3.c  utils.c  utils.h
